add mail ejs template

--- a/views/emails/partials/_confirmEmail.ejs
+++ b/views/emails/partials/_confirmEmail.ejs
@@ -1,1 +1,6 @@
-<a href="<%= url %>">Click here to confirm your inscription.</a>
+<div class="container">
+   <h1>Email Confirmation</h1>
+   <p>Thank you for signing up! Please click the button below to confirm your email address:</p>
+   <a href="<%= url %>" class="btn">Confirm Email</a>
+   <p class="footer">If you did not sign up for this service, you can safely ignore this email.</p>
+</div>
