--- a/views/emails/partials/_inscription.ejs
+++ b/views/emails/partials/_inscription.ejs
@@ -1,1 +1,7 @@
-<h1>Welcome to Park'N'Share!</h1>
+ <div class="container">
+    <h1>Welcome to Park'N'Share!</h1>
+    <p>Thank you for joining Park'N'Share. We are excited to have you on board!</p>
+    <p>Get started by exploring our features and making the most out of our community.</p>
+    <a href="<%= url %>" class="btn">Go to Dashboard</a>
+    <p class="footer">If you have any questions or need assistance, feel free to reach out.</p>
+</div>
