--- a/views/emails/partials/_parkingEndReservation.ejs
+++ b/views/emails/partials/_parkingEndReservation.ejs
@@ -1,1 +1,6 @@
-<p>The reservation of your parking has ended.</p>
+<div class="container">
+   <h1>Parking Reservation Ended</h1>
+   <p>Your parking reservation has ended. We hope you had a convenient parking experience with us.</p>
+   <p>If you need to extend your reservation or have any other inquiries, please visit your account or contact our support.</p>
+   <p class="footer">Thank you for choosing Park'N'Share for your parking needs.</p>
+</div>
