--- a/views/emails/partials/_parkingReserved.ejs
+++ b/views/emails/partials/_parkingReserved.ejs
@@ -1,1 +1,12 @@
-<p>Your parking was reserved.</p>
+<div class="container">
+    <h1>Parking Reservation Successful</h1>
+    <p>Your parking spot has been successfully reserved. Thank you for choosing Park'N'Share!</p>
+    <p>Here are the details of your reservation:</p>
+    <ul>
+      <li><strong>Reservation ID:</strong> <%= reservationID %></li>
+      <li><strong>Parking Spot:</strong> <%= parkingSpot %></li>
+      <li><strong>Date and Time:</strong> <%= reservationDateTime %></li>
+    </ul>
+    <p>Please ensure you arrive on time and follow any additional instructions provided for your parking location.</p>
+    <p class="footer">If you have any questions or need assistance, feel free to reach out.</p>
+</div>
