--- a/views/emails/partials/_forgotPassword.ejs
+++ b/views/emails/partials/_forgotPassword.ejs
@@ -1,1 +1,6 @@
-<a href="<%= url %>">Click here to change your forgotten password.</a>
+<div class="container">
+    <h1>Forgot Password</h1>
+    <p>You've requested to reset your password. Please click the button below to reset it:</p>
+    <a href="<%= url %>" class="btn">Reset Password</a>
+    <p class="footer">If you didn't request a password reset, you can safely ignore this email.</p>
+</div>
